<resources>
    <string name="app_name">ToolBar+NavigationDrawer</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_help">Help</string>
    <string name="layout_test">Layout Test</string>
    <string name="something2">bb</string>
    <string name="title_activity_layout_test">LayoutTest</string>

</resources>
