<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:title="@string/action_help"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_layout_test"
        android:orderInCategory="100"
        android:title="@string/layout_test"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_something2"
        android:orderInCategory="100"
        android:title="@string/something2"
        app:showAsAction="never" />
</menu>
